--- a/saar-first/package.json
+++ b/saar-first/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.9",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.294.0",
     "next": "13.5.6",
+    "nextjs": "^0.0.3",
     "peerjs": "^1.5.1",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
