--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,41 @@
-node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/src/**/strapiData/*
+!/src/**/strapiData/.gitkeep 
+/.pnp
+.pnp.js
+report.*.json
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/.serverless_nextjs/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+/public/sw.js.map
+/public/workbox-*
+/public/sw.js
+ 
+# sonar scanner
+/.scannerwork/
