--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@clerk/nextjs": "^4.29.9",
     "classnames": "^2.3.2",
+    "core-js": "^3.36.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.294.0",
     "next": "13.5.6",
@@ -20,6 +22,8 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-player": "^2.13.0",
+    "react-speech-recognition": "^3.10.0",
+    "regenerator-runtime": "^0.14.1",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "uuid": "^9.0.1"
