--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bG92ZWQtbmV3dC00OC5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_wyPjpITFRBYlOsMWRbwNnpPglUZgWhmONXn8iulTxM
+
+MONGODB_URI=mongodb+srv://swnhimanshu:MdMU3vyQG79T9kUd@cluster0.iumnaqh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
