--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@clerk/nextjs": "^4.29.9",
     "classnames": "^2.3.2",
     "core-js": "^3.36.0",
+    "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.294.0",
+    "mongodb": "^6.4.0",
     "next": "13.5.6",
     "nextjs": "^0.0.3",
     "peerjs": "^1.5.1",
