--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.294.0",
     "mongodb": "^6.4.0",
+    "mongoose": "^8.2.1",
     "next": "13.5.6",
     "nextjs": "^0.0.3",
     "peerjs": "^1.5.1",
