--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@clerk/nextjs": "^4.29.9",
+    "axios": "^1.6.7",
     "classnames": "^2.3.2",
     "core-js": "^3.36.0",
     "dotenv": "^16.4.5",
